# kayle-id-v1

./: .env.example  .env.test.example  .gitignore  .infisical.json  AGENTS.md  CODE_INSTRUCTIONS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  biome.jsonc  bunfig.toml  package.json  solo.yml  turbo.json
.codex/environments/: environment.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: build.yml  ci.yml  deploy-workers.yml  test.yml  (+6 more)
apps/biometric-verifier/: .env.example  .gitignore  Cargo.toml  Dockerfile  cloudflare-env.d.ts  package.json  pyproject.toml  tsconfig.json  wrangler.jsonc
apps/biometric-verifier/scripts/: dev-with-healthcheck.sh  download-models.sh  dump-crops.py  dynamize-yunet.py  gen-affine-fixtures.py  gen-auraface-fixture.py  gen-pnp-fixtures.py  gen-yunet-fixture.py
apps/biometric-verifier/src/: affine.rs  auraface.rs  config.rs  image_io.rs  index.test.ts  index.ts  lib.rs  logging.rs  main.rs  matcher.ts  mesh.rs  mesh_similarity.py  mesh_similarity_test.py  nonce.rs  pad.rs  pipeline.rs  pnp.rs  pose_timeline.rs  runtime.rs  server.rs  service.py  service_clamps_test.py  service_nonce_test.py  supply-chain.test.ts  types.rs  video.rs  worker.ts  wrangler-config.test.ts  yunet.rs
apps/biometric-verifier/tests/: affine_parity.rs  auraface_parity.rs  pnp_parity.rs  yunet_parity.rs
apps/biometric-verifier/tests/fixtures/: affine_partial_lmeds.json  auraface_embedding.json  pnp_epnp.json  yunet_detections.json
docs/: .mintignore  docs.json  index.mdx  quickstart.mdx
scripts/: app-store-connect.ts  check-app-store-agreements.test.ts  check-app-store-agreements.ts  check-github-actions-pinned.ts  check-runtime-console.ts  check-runtime-python-logs.ts  generate-webhook-keypair.ts  import-icao-pkd.test.ts  import-icao-pkd.ts  package-worker-deploy-artifact.mjs  package-worker-deploy-artifact.test.mjs  pull-env.sh  resolve-ios-build-number.test.ts  resolve-ios-build-number.ts  seed-local-dev.sh  seed-production-pkd.sh  setup-env.ts
(+1153 files in other folders)
