[package]
name = "biometric-verifier"
version = "0.0.1"
edition = "2021"
license = "Proprietary"
publish = false

[[bin]]
name = "biometric-verifier"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "sync"] }
tower = { version = "0.5", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
nalgebra = "0.33"
ndarray = "0.16"
zune-jpeg = "0.4"
zune-core = "0.4"
fast_image_resize = { version = "5", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
thiserror = "1"
anyhow = "1"
once_cell = "1"
half = "2"
hex = "0.4"
sha2 = "0.10"
subtle = "2"
libc = "0.2"
tempfile = "3"

[dependencies.ort]
# Keep this exact rc pin until `download-binaries` is stable on an ort release;
# it controls how libonnxruntime is bundled into the container image.
version = "=2.0.0-rc.10"
default-features = false
features = ["std", "ndarray", "download-binaries"]

[dependencies.ffmpeg-next]
version = "7"
default-features = false
features = ["codec", "format", "software-scaling"]

[dev-dependencies]
approx = "0.5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 1
