[project]
name = "kayle-id-biometric-verifier-runtime"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
  "numpy==2.2.4",
  "opencv-python-headless==4.10.0.84",
  # onnxruntime hosts the MediaPipe Face Landmarker mesh model. cv2.dnn
  # stays in charge of PAD (straightforward MiniFASNet); the two runtimes
  # coexist because MediaPipe's converted ONNX uses op combinations that
  # cv2.dnn has historically choked on, and a reliable load matters more
  # than image size for this one.
  "onnxruntime==1.20.1",
]
